fixed dashboard styling on smaller screens

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,7 +8,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  padding: var(--spacing-large) 0 0 0;
+  /* padding: var(--spacing-large) 0 0 0; */
 }
 
 .heroContainer {
@@ -33,7 +33,7 @@ body {
 @media screen and (max-width: 768px) {
   .rootContainer {
     width: 100%;
-    padding: var(--spacing-medium) 0;
+    /* padding: var(--spacing-medium) 0; */
   }
 
   .heroContainer {
