--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -5,7 +5,7 @@
   padding: var(--spacing-large);
   margin: 0 auto;
   gap: var(--spacing-medium);
-  border-radius: var(--border-radius-large);
+  border-radius: 0 0 var(--border-radius-large) var(--border-radius-large);
 }
 
 .dashboardContainer {
@@ -27,7 +27,7 @@
 @media screen and (max-width: 768px) {
   .dashboard {
     width: 90%;
-    padding: var(--spacing-medium);
+    /* padding: var(--spacing-large) var(--spacing-medium); */
   }
   .dashboardContainer {
     width: 100%;
@@ -43,6 +43,7 @@
   .dashboard {
     flex-direction: column;
     align-items: center;
+    padding: var(--spacing-large) var(--spacing-medium);
   }
   .dashboardContainer {
     flex-direction: row;
